# dndcs

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  config.yaml  pyproject.toml
lib/: formula.py
schema/: character.yaml
static/: app.js  index.html  logic.js  style.css
testdata/: newsample.yaml  sample.yaml  test.yaml
tests/integration/: conftest.py  test_api.py  test_formula.py  test_html.py  test_ui.py
tests/unit/: test_logic.mjs
