[project]
name = "dndcs"
version = "0.1.0"
description = "D&D character sheet web app"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "check-jsonschema>=0.28",
    "types-PyYAML>=6.0",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
